syntax = "proto3";
package com.antigravity;

option java_package = "com.antigravity.proto";
option java_multiple_files = true;
option java_outer_classname = "SetInterfacePinStateProto";

message SetInterfacePinStateRequest {
  int32 pin = 1;
  bool is_digital = 2;
  bool is_high = 3;
}

message SetInterfacePinStateResponse {
  bool success = 1;
  string message = 2;
}
